<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Let\'sShare</string>

    <!--    login and registration messages-->
    <string name="name_email_password_not_blank">You need to provide name, email and password.</string>
    <string name="password_needs_6letters">Your password must have at least 6 characters.</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="verification_email_sent">You should have an email with verification link. Please verify your account before login.</string>
    <string name="problem_registration">Registration failure. Try again.</string>
    <string name="email_already_exists">This email is already registered. Use different one.</string>
    <string name="verify_email">In order to login you need to verify your email first. Check you email box.</string>
    <string name="login_problem">Cannot login. Check your email and password and try again.</string>
    <string name="different_emails">Emails are not identical.</string>
    <string name="different_passwords">Passwords are not identical.</string>
    <string name="invalid_email">Invalid email format.</string>

    <!--    other messages-->
    <string name="connection_problem">No internet connection.</string>
    <string name="user_with_email_not_in_database">User with this email doesn\'t exist. Check email and try again.</string>
    <string name="its_your_email">You cannot add yourself.</string>
    <string name="you_have_this_friend">This person is already your friend.</string>
    <string name="cant_add_friend">Couldn\'t add the friend. Try again.</string>
    <string name="cant_get_friends">Couldn\'t get friends list.</string>
    <string name="cant_add_group">Couldn\'t add the group. Try again.</string>
    <string name="group_added">Group added.</string>
    <string name="too_many_groups">1 user can be in 5 groups max.</string>
    <string name="cant_get_groups">Couldn\'t get groups list.</string>
    <string name="no_group_name">You need to provide a group name first.</string>
    <string name="cant_get_group_members">Couldn\'t get the group members.</string>
    <string name="cant_get_month">Couldn\'t get month details. Try again.</string>
    <string name="too_many_members">1 group can have 7 members max.</string>
    <string name="cant_add_member">Couldn\'t add the member. Try again.</string>
    <string name="member_exists">This person is already in the group.</string>
    <string name="cant_add_expense">Couldn\'t add the expense. Try again.</string>
    <string name="cant_delete_expense">Couldn\'t delete the expense. Try again.</string>
    <string name="cant_get_expenses">Couldn\'t get expenses list.</string>
    <string name="friend_in_too_many_groups">Your friend has reached max number of 5 groups.</string>
    <string name="something_wrong">Something went wrong. Try again.</string>
    <string name="percentage_not_100">Total percentage must be equal 100.00%.</string>
    <string name="cant_get_months_list">Couldn\'t get months list. Try again.</string>
    <string name="settled_up_message">This month is settled up.</string>
    <string name="not_settled_up_message">This month is not settled up yet.</string>
    <string name="cant_settle_up">Couldn\'t settled up the month. Try again.</string>
    <string name="cant_operate_on_settled_up_month">Can\'t do this when month is already settled up.</string>
    <string name="swipe_to_delete">Swipe to delete.</string>
    <string name="expense_too_small">Value of expense must be at least "0.01".</string>
    <string name="new_expense_notification_title">New expense from %1$s.</string>
    <string name="new_expense">New expense.</string>
    <string name="new_expense_notification_message">New expense in %1$s group.</string>
    <string name="new_expense_notification_info">Notifications about new expenses.</string>

    <!--    UI elements -->
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="owes">Owes:</string>
    <string name="over">Over:</string>
    <string name="provide_name">Provide name</string>
    <string name="provide_value">Provide value</string>
    <string name="group_settings">Group settings</string>
    <string name="add_expense">Add expense</string>
    <string name="add_new_member">Add member</string>
    <string name="remove_member">Delete member</string>
    <string name="login_title">Login</string>
    <string name="registration">Registration</string>
    <string name="split_colon">Split:</string>
    <string name="split">Split</string>
    <string name="total_expense">Total:</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="first_time_here">First time here?\nRegister new user:</string>
    <string name="add_friend">Add friend</string>
    <string name="previous_months">Previous months</string>
    <string name="expense_name">Name</string>
    <string name="expense_value">Value</string>
    <string name="person_name">Name</string>
    <string name="group_name">Name</string>
    <string name="add_group">Add group</string>
    <string name="your_name">Your name:</string>
    <string name="your_email">Your email:</string>
    <string name="history">History</string>
    <string name="settle_up">Settle up</string>
    <string name="settle_up_dialog_title">Settle up the month?</string>
    <string name="settle_up_dialog_message">Once you settle up this month\nyou won\'t be able to modify it.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="is_settled_up">Is settled up</string>
    <string name="create_user">Create user</string>
    <string name="total_split_100">Total split must be equal 100.00%:</string>
    <string name="set_split_equal">Set %\nequally</string>
    <string name="save">Save</string>

</resources>