<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/groupSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/group_settings" />

    <item
        android:id="@+id/addExpense"
        android:icon="@drawable/ic_add_expense"
        android:title="@string/add_expense" />

    <item
        android:id="@+id/addMember"
        android:icon="@drawable/ic_add_friend"
        android:title="@string/add_new_member" />

    <item
        android:id="@+id/removeMember"
        android:icon="@drawable/ic_remove_member"
        android:title="@string/remove_member" />

    <item
        android:id="@+id/addFriend"
        android:icon="@drawable/ic_add_friend"
        android:title="@string/add_friend" />

    <item
        android:id="@+id/addGroup"
        android:title="@string/add_group" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/settleUp"
        android:icon="@drawable/ic_dolar"
        android:title="@string/settle_up" />

</menu>