<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameFrame"
        android:layout_width="@dimen/editTextLargeWidthDialog"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallMarginDialog"
        android:layout_marginTop="@dimen/smallMarginDialog"
        android:layout_marginEnd="@dimen/smallMarginDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/confirm"
        android:layout_width="@dimen/smallButtonSizeDialog"
        android:layout_height="@dimen/smallButtonSizeDialog"
        android:layout_marginEnd="@dimen/smallMarginDialog"
        android:layout_marginBottom="@dimen/smallMarginDialog"
        android:contentDescription="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check"
        app:tint="?attr/checkColor" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="@dimen/smallButtonSizeDialog"
        android:layout_height="@dimen/smallButtonSizeDialog"
        android:layout_marginStart="@dimen/smallMarginDialog"
        android:layout_marginTop="@dimen/mediumMarginDialog"
        android:layout_marginBottom="@dimen/smallMarginDialog"
        android:contentDescription="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameFrame"
        app:srcCompat="@drawable/ic_x"
        app:tint="@color/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
